--- a/templates/registration/signup_fan.html
+++ b/templates/registration/signup_fan.html
@@ -10,5 +10,8 @@
     <button type="submit">Sign Up</button>
 </form>
 
+<p>Are you an artist ?</p>
+<a href="{% url 'artist_signup' %}">Sign Up</a>
+
 
 {% endblock content %}
