--- a/templates/base.html
+++ b/templates/base.html
@@ -4,11 +4,22 @@
     </head>
     <body>
 
+        <a href="{% url 'home' %}">BandLab</a>
+
         {% if user.is_authenticated %}
 
         <p>Hello {{user.username}}</p>
+        <p>{{user.is_artist}}</p>
+        <p><a href="{% url 'logout' %}">Log out</a></p>
+
+        {% else %}
+
+        <p><a href="{% url 'login' %}">Login</a></p>
+        <a href="{% url 'fan_signup' %}">Sign Up </a>
 
         {% endif %}
+
+        
 
 
 
