--- a/templates/registration/signup_fan.html
+++ b/templates/registration/signup_fan.html
@@ -11,7 +11,7 @@
 </form>
 
 <p>Are you an artist ?</p>
-<a href="{% url 'artist_signup' %}">Sign Up</a>
+<a href="{% url 'artist_signup' %}">Sign Up As An Artist</a>
 
 
 {% endblock content %}
