--- a/templates/base.html
+++ b/templates/base.html
@@ -1,58 +1,72 @@
+{% load static %}
+
+
 <html>
     <head>
         <title>BandCamp</title>
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+crossorigin="anonymous">
+
+<!-- JS -->
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+  integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+  crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+  integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNSL0ul"
+  crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+  integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+  crossorigin="anonymous"></script>
+
+        
     </head>
-    <body>
-
-        <a href="{% url 'home' %}">BandLab</a>
-
-        {% if user.is_authenticated %}
-
-        <p>Hello {{user.username}}</p>
-        <p>Is artist ? {{user.is_artist}}</p>
-        <p><a href="{% url 'logout' %}">Log out</a></p>
-         
-        {% if user.is_artist %}
-
-        {% if user.artistprofile %}
-
-        <a href="{% url 'artist_profile_page' user.artistprofile.id %}">Your profile</a>
-        
-
-            {% else %}
-
-
-                <a href="{% url 'create_artist_profile_page'%}">You do not have a profile yet , let's create one and build your profile</a>
-                <p>Lets create your profile</p>
-
-                {% endif %}
-
-
-                {% else %}
-
-
-
-
-        {% endif %}
-        
-
-
-
-
-        {% else %}
-
-        <p><a href="{% url 'login' %}">Login</a></p>
-        <a href="{% url 'fan_signup' %}">Sign Up </a>
-
-        {% endif %}
-
-        
-
-
-
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container">
+            <a class="navbar-brand" href="{% url 'home' %}">BandCamp</a>
+            
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+    
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ml-auto">
+                    {% if user.is_authenticated %}
+                        
+                        <li class="nav-item">
+                            <span class="nav-link">Is artist? {{ user.is_artist }}</span>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'logout' %}">Log out</a>
+                        </li>
+                        {% if user.is_artist %}
+                            {% if user.artistprofile %}
+                                <li class="nav-item">
+                                    <a class="nav-link" href="{% url 'artist_profile_page' user.artistprofile.id %}">Your profile</a>
+                                </li>
+                            {% else %}
+                                <li class="nav-item">
+                                    <a class="nav-link" href="{% url 'create_artist_profile_page' %}">Create Profile</a>
+                                </li>
+                            {% endif %}
+                        {% endif %}
+                    {% else %}
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'login' %}">Login</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'fan_signup' %}">Sign Up</a>
+                        </li>
+                    {% endif %}
+                </ul>
+            </div>
+        </div>
+    </nav>
+    
+    <div class="container">
         {% block content %}
-
-
+        
         {% endblock content %}
-    </body>
+    </div>
+    
 </html>
