user profiles implemented

--- a/templates/base.html
+++ b/templates/base.html
@@ -44,7 +44,7 @@ crossorigin="anonymous">
                         {% else %}
 
                         <li class="nav-item">
-                            <span class="nav-link">You are {{user.userprofile.name}}</span>
+                            <span class="nav-link">You are {{user}}</span>
                         </li>
 
                         {% endif %}
