--- a/templates/user_profile_page.html
+++ b/templates/user_profile_page.html
@@ -10,5 +10,35 @@
 <a href="{% url 'edit_user_profile' page_user.id %}"><p>Edit Profile</p></a>
 {% endif %}
 
+<hr>
+
+<h3>Wishlist</h3>
+<div class="row">
+    {% for album in wishlist_albums %}
+        <div class="col-md-4 mb-4">
+            {% if album.album_pic %}
+            <a href="{% url 'album_page' album.id %}">
+                <img src="{{ album.album_pic.url }}" class="custom-image album-image" width="100" height="100" alt="{{ album.title }}">
+            </a>
+            {% endif %}
+            <a href="{% url 'album_page' album.id %}">
+                <p class="album-title">{{ album.title }}</p>
+            </a>
+            
+        </div>
+    {% endfor %}
+</div>
+<style>
+    .album-image {
+        width: 50%;
+        height: auto;
+    }
+
+    .album-title {
+        margin-top: 10px;
+        font-weight: bold;
+    }
+</style>
+
 
 {% endblock content %}
