--- a/templates/user_profile_page.html
+++ b/templates/user_profile_page.html
@@ -5,6 +5,8 @@
 <p>{{page_user.user}}</p>
 <img src="{{ page_user.user_pic.url }}" style="width: 150px; height: 150px; margin-right: 20px;">
 <p>{{page_user.bio}}</p>
+<p>{{page_user.location}}</p>
+
 
 {% if page_user.user.id == user.id %}
 <a href="{% url 'edit_user_profile' page_user.id %}"><p>Edit Profile</p></a>
@@ -28,6 +30,27 @@
         </div>
     {% endfor %}
 </div>
+
+<hr>
+<h3>Followed Artists</h3>
+
+<div class="row">
+    {% for artistprofile in followed_artists %}
+        <div class="col-md-4 mb-4">
+            {% if artistprofile.artist_pic %}
+            <a href="{% url 'artist_profile_page' artistprofile.id %}">
+                <img src="{{ artistprofile.artist_pic.url }}" class="custom-image artist-image" width="100" height="100" alt="{{ artistprofile.artist_name }}">
+            </a>
+            {% endif %}
+            <a href="{% url 'artist_profile_page' artistprofile.id %}">
+                <p class="artists-title">{{ artistprofile.artist_name }}</p>
+            </a>
+            
+        </div>
+    {% endfor %}
+</div>
+
+
 <style>
     .album-image {
         width: 50%;
@@ -35,6 +58,16 @@
     }
 
     .album-title {
+        margin-top: 10px;
+        font-weight: bold;
+    }
+
+    .artist-image {
+        width: 40%;
+        height: auto;
+    }
+
+    .artist-title {
         margin-top: 10px;
         font-weight: bold;
     }
