--- a/templates/create_album.html
+++ b/templates/create_album.html
@@ -9,6 +9,7 @@
         {% csrf_token %}
         {{form.media}}
         {{form|crispy}}
+        {{form.media}}
         <button type="submit" class="btn btn-primary">Submit</button>
       </form>
     </div>
