reverse urls of editing artist profile and album

--- a/templates/home.html
+++ b/templates/home.html
@@ -3,5 +3,26 @@
 {% block content %}
 
 
+<div class="centered-content">
+    <p>BandCamp currently has {{num_of_artists}} artists and {{num_of_albums}} albums.
+      Search artists or albums, buy digital copies, or donate to your favorite bands.</p>
+  </div>
+  
+  
+  
+  
+  <style>
+   
+    .centered-content {
+      text-align: center;
+      margin: 50px auto; 
+      max-width: 600px; 
+      font-family: 'Arial', sans-serif; 
+      color: #333; 
+      font-size: 18px; 
+      line-height: 1.5; 
+    }
+  </style>
 
 {% endblock content %}
+
