--- a/templates/artist_profile_page.html
+++ b/templates/artist_profile_page.html
@@ -63,6 +63,18 @@
 
             {% endif %}
 
+            <h2>{{page_user.artist_name}} is supported by:</h2>
+    
+            <div class="row">
+                {% for user in supporters %}
+                    <div class="col-md-4">
+                        <a href="{% url 'user_profile_page' user.userprofile.id %}">
+                            <img src="{{ user.userprofile.user_pic.url }}" class="custom-image supporter-image" style="width: 100%; height: auto;">
+                        </a>
+                    </div>
+                {% endfor %}
+            </div>
+
         </div>
     </div>
 </div>
@@ -76,6 +88,10 @@
     .album-title {
         margin-top: 10px;
         font-weight: bold;
+    }
+    .supporter-image{
+        width: 30%;
+        height: auto;
     }
 </style>
 
